Changed the fixed top bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <body>
         
-        <nav id = "header-nav" class="navbar navbar-default navbar-fixed-top">
+        <nav id = "header-nav" class="navbar navbar-default">
             <div id="containerid" class="container"> <!--We dont need container fluid bcoz it introduces some padding-->
                 <div class="navbar-header">
                     <div id="brandname" class="navbar-brand">
